# iDev

./: .gitignore  README.md
Cpp/: CMakeGTKmmGen.sh  CMakeProjectGen.sh  VSCodeProjectGen.sh  VSCodeProjectGen_SFML.sh
Cpp/GTK/P001-CMakeGTK/: CMakeLists.txt  ReadMe.txt  buildScript.sh
Cpp/GTKmm/P001-CMakeGTKmm/Assistant/: CMakeLists.txt
Cpp/GTKmm/P001-CMakeGTKmm/ButtonBox/: CMakeLists.txt
Cpp/GTKmm/P001-CMakeGTKmm/ButtonBox/src/: examplebuttonbox.cpp
